--- a/05.Crawling/01.BeatifulSoup.ipynb
+++ b/05.Crawling/01.BeatifulSoup.ipynb
@@ -67,6 +67,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 태그 : 소스코드 한줄 한줄\n",
+    "- 노드 : 태그, but 프로그램 실행될 때 계층적 성질을 지닐 때 \n",
+    "- find(a).find(b) = select(a>b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- find() - 조건에 맞는 한 개의 tag 찾는 메소드 "
    ]
   },
@@ -175,35 +184,6 @@
     "all_divs\n",
     "\n",
     "# soup에 포함된 div 3개가 리스트 형태로 출력 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div>\n",
-       " <p>a</p><p>b</p><p>c</p>\n",
-       " </div>,\n",
-       " <div class=\"ex_class sample\">\n",
-       " <p>1</p><p>2</p><p>3</p>\n",
-       " </div>,\n",
-       " <div id=\"ex_id\">\n",
-       " <p>X</p><p>Y</p><p>Z</p>\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_divs = soup.find_all('div')\n",
-    "all_divs"
    ]
   },
   {
