--- a/05.Crawling/03.식신.ipynb
+++ b/05.Crawling/03.식신.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from urllib.parse import quote\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,15 +57,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 평가중인 제주시새우리"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +67,14 @@
        "60"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lis = soup.select_one('div.listTy1').find_all('li')\n",
-    "len(lis)"
+    "lis = soup.select_one('.listTy1').find_all('li')\n",
+    "len(lis)\n"
    ]
   },
   {
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -105,15 +98,15 @@
        "12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 자식 Selector \n",
-    "lis = soup.select('div.listTy1 > ul > li')\n",
-    "len(lis)"
+    "lis = soup.select('.listTy1 > ul > li')\n",
+    "len(lis)\n"
    ]
   },
   {
@@ -129,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 안양돈까스 제주시점"
+    "- 평가중인 제주시새우리 말고, 2번째인 안양돈까스 제주시점"
    ]
   },
   {
@@ -149,14 +142,21 @@
     }
    ],
    "source": [
-    "li = lis[1]         # 안양돈까스 인덱싱\n",
+    "li = lis[1]                   # 안양돈까스 인덱싱\n",
     "href = li.find('a')['href']\n",
     "href"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 평점 score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -165,19 +165,27 @@
        "'3.4'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score = li.select_one('.score').string\n",
-    "score"
+    "score = li.select_one('.score').get_text().strip()\n",
+    "score\n",
+    "# 왜 int가 안 먹힐까..?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 상호 store"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -186,19 +194,26 @@
        "'안양돈까스 제주시점'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "store = li.select_one('.store').get_text()\n",
+    "store = li.select_one('.store').get_text().strip()\n",
     "store"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 메뉴 menu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -207,19 +222,19 @@
        "'돈까스 세트, 치즈돈까스 세트'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "menu = li.find('p').get_text()\n",
-    "menu"
+    "menu = li.find('p').get_text().strip()\n",
+    "menu "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -228,31 +243,38 @@
        "'https://www.siksinhot.com/P/466268'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub_url = site + href \n",
+    "sub_url = site + href\n",
     "sub_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url 가지고 오는 메소드..? \n",
+    "# sub_url 가지고 오는 메소드\n",
     "sub_req = requests.get(sub_url)\n",
-    "sub_html = sub_req.text\n",
+    "sub_html = sub_req.text \n",
     "sub_soup = BeautifulSoup(sub_html, 'html.parser')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 전화번호 tel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -261,19 +283,26 @@
        "'064-799-1434'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tel = sub_soup.select_one('.p_tel').find('p').get_text()\n",
-    "tel"
+    "tel = sub_soup.select_one('.p_tel').find('p').get_text().strip()\n",
+    "tel "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 주소 addr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -282,14 +311,14 @@
        "'제주특별자치도 제주시 애월읍 애월로 40'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "addr = sub_soup.select_one('.txt_adr').get_text()\n",
-    "addr"
+    "addr = sub_soup.select_one('.txt_adr').get_text().strip()\n",
+    "addr "
    ]
   },
   {
@@ -297,6 +326,50 @@
    "metadata": {},
    "source": [
     "### 4. 페이지에 있는 데이터 가져오기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-65-6e69ff9677cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mli\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mhref\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.score'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mstore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.store'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mmenu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'p'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get_text'"
+     ]
+    }
+   ],
+   "source": [
+    "lines = []\n",
+    "\n",
+    "for li in lis:\n",
+    "    href = li.find('a')['href']\n",
+    "    score = li.select_one('.score').get_text().strip()\n",
+    "    store = li.select_one('.store').get_text().strip()\n",
+    "    menu = li.find('p').get_text().strip()\n",
+    "\n",
+    "    sub_url = site + href\n",
+    "    sub_req = requests.get(sub_url)\n",
+    "    sub_html = sub_req.text \n",
+    "    sub_soup = BeautifulSoup(sub_html, 'html.parser')\n",
+    "\n",
+    "    tel = sub_soup.select_one('.p_tel').find('p').get_text().strip()\n",
+    "    addr = sub_soup.select_one('.txt_adr').get_text().strip()\n",
+    "\n",
+    "    lines.append([score, store, menu, tel, addr])\n",
+    "\n",
+    "df = pd.DataFrame(lines, columns = ['평점', '상호', '메뉴', '전화번호', '주소'])\n",
+    "df\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -382,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +465,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-45ccccfaab85>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mli\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.score'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-70-3c708dfc58f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mli\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.score'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# li에 score가 없기 때문에 에러가 남\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'string'"
      ]
     }
@@ -407,23 +480,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'평가중제주시새우리제주시내딱새우김밥, 간장새우김밥, 양념새우컵밥, 딱새우꼬막무침, 한라봉에이드96651822'"
+       "'평가중'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "li = lis[0]\n",
-    "score = li.select_one('.cnt').get_text()\n",
+    "score = li.select_one('.cnt > em').get_text()\n",
     "score\n"
    ]
   },
@@ -444,7 +517,7 @@
     }
    ],
    "source": [
-    "lis[1].select_one('.cnt > em').get_text()"
+    "lis[1].select_one('.cnt > em').get_text()       # 같은 식으로 인덱스 0,1 둘다 돌아감 확인"
    ]
   },
   {
@@ -465,17 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = []\n",
+    "\n",
     "for li in lis:\n",
     "    href = li.find('a')['href']\n",
     "    store = li.select_one('.store').get_text()\n",
     "    score = li.select_one('.cnt > em').get_text()\n",
     "    if score == '평가중':\n",
-    "        score = 0.0\n",
+    "        score == 0.0\n",
     "    menu = li.find('p').get_text()\n",
     "\n",
     "    sub_url = site + href \n",
@@ -497,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +606,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>제주시새우리</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>평가중</td>\n",
        "      <td>딱새우김밥, 간장새우김밥, 양념새우컵밥, 딱새우꼬막무침, 한라봉에이드</td>\n",
        "      <td>064-900-2527</td>\n",
        "      <td>제주특별자치도 제주시 무근성7길 21</td>\n",
@@ -575,7 +649,7 @@
       ],
       "text/plain": [
        "          업소명   평점                                       메뉴          전화번호  \\\n",
-       "0      제주시새우리  0.0   딱새우김밥, 간장새우김밥, 양념새우컵밥, 딱새우꼬막무침, 한라봉에이드  064-900-2527   \n",
+       "0      제주시새우리  평가중   딱새우김밥, 간장새우김밥, 양념새우컵밥, 딱새우꼬막무침, 한라봉에이드  064-900-2527   \n",
        "1  안양돈까스 제주시점  3.4                         돈까스 세트, 치즈돈까스 세트  064-799-1434   \n",
        "2        올래국수  3.8                                     고기국수  064-742-7355   \n",
        "3        명진전복  3.8                    전복죽, 전복돌솥밥, 전복구이, 전복회  064-782-9944   \n",
@@ -589,7 +663,7 @@
        "4         제주특별자치도 제주시 선덕로5길 20  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,10 +675,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('식신맛집(제주시청).csv', index = False)"
+   ]
   }
  ],
  "metadata": {
