--- a/01.Numpy/01.Numpy-1.ipynb
+++ b/01.Numpy/01.Numpy-1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +95,13 @@
        "       [5, 6, 7, 8, 9]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(10).reshape(2,5)"
+    "np.arange(10).reshape(2,5)      # 2차원 배열(행,열)"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "array([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
